--- a/Frontend/src/Components/Pricing/Pricing.css
+++ b/Frontend/src/Components/Pricing/Pricing.css
@@ -46,20 +46,16 @@
 .glass {
   position: relative;
   padding-top: 50px;
- 
 }
 
-
 @media screen and (max-width: 600px) {
-
-  .glass  {
+  .glass {
     margin-bottom: 120px;
   }
 }
 
-
 .div1 {
-  background-image: url('../../Images/1.png');
+  background-image: url("../../Images/1.png");
   background-size: cover;
   color: #000;
   z-index: 1;
@@ -67,13 +63,13 @@
 }
 
 .div2 {
-  background-image: url('../../Images/2.png');
+  background-image: url("../../Images/2.png");
   background-size: cover;
   min-height: 450px;
 }
 
 .div3 {
-  background-image: url('../../Images/3.png');
+  background-image: url("../../Images/3.png");
   background-size: cover;
   min-height: 420px;
   padding: 50px 20px 50px;
@@ -119,10 +115,10 @@
 }
 
 .title:after {
-  content: '';
+  content: "";
   width: 100%;
   height: 30px;
-  background-image: url('../../Images/blur.png');
+  background-image: url("../../Images/blur.png");
   background-size: 100%;
   position: absolute;
   bottom: 0px;
@@ -133,7 +129,7 @@
 }
 
 .purchase {
-  background-image: url('../../Images/purchase.png');
+  background-image: url("../../Images/purchase.png");
   background-size: cover;
   width: 250px;
   height: 90px;
@@ -144,7 +140,7 @@
   margin-right: auto;
   left: 0;
   right: 0;
-  bottom: -65px;
+  bottom: -45px;
   z-index: 1;
   text-align: center;
   font-size: 25px;
