--- a/Frontend/src/Components/Top banner/NavigationBar.css
+++ b/Frontend/src/Components/Top banner/NavigationBar.css
@@ -146,13 +146,11 @@ button.learn-more:hover:before {
   border-radius: 10px;
   margin-left: 0;
   margin-right: 0;
-  /* background-color: #000; */
+  background-color: #262626;
 }
 
 .my-dropdown {
   background-color: #1a1a1a;
-  /* background-color: #fff; */
-  /* background-image: url('../../assets/header.png'); */
   background-size: cover;
   width: 800px;
   opacity: 1;
@@ -161,21 +159,16 @@ button.learn-more:hover:before {
 }
 
 .dropdown-link img {
-  /* background-color: #000; */
   border-radius: 10px;
-  /* padding-left: 5px;
-  padding-right: 5px; */
+}
+
+.dropdown:hover .dropdown-menu {
+  display: block;
+  margin-top: 0;
 }
 
 
-
-/* .dropdown-image {
-  width: 200px;
-  height: 100px;
-} */
-
 .dropdown-description {
-  /* width: 90%; */
   font-size: 13px;
   opacity: 0.8;
   white-space: pre-wrap;
