--- a/Frontend/src/Components/Top banner/NavigationBar.css
+++ b/Frontend/src/Components/Top banner/NavigationBar.css
@@ -162,10 +162,10 @@ button.learn-more:hover:before {
   border-radius: 10px;
 }
 
-.dropdown:hover .dropdown-menu {
+/* .dropdown:hover .dropdown-menu {
   display: block;
   margin-top: 0;
-}
+} */
 
 
 .dropdown-description {
