--- a/Frontend/src/Portfolio.css
+++ b/Frontend/src/Portfolio.css
@@ -52,7 +52,7 @@
   font-weight: bold;
 }
 .nav-item button.active {
-  color: red !important;
+  color: #ba1432 !important;
   font-weight: bold;
 }
 
